fix spacing, hide footer in OL 2003-2016, rearrange files

--- a/promo/css/styles.css
+++ b/promo/css/styles.css
@@ -52,7 +52,7 @@
 }
 
 .star-sprite {
-    background: url('star.png') no-repeat;
+    background: url('../img/star.png') no-repeat;
     display: inline-block;
 }
 
